test_programs/compile_failure/regression_10431/src/main.nr
struct Foo<T> {
    x: T,
}

impl Foo<1> {}

fn main() {
    let foo: Foo<1> = std::mem::zeroed();
    println(foo.x);
}
